--- a/index.html
+++ b/index.html
@@ -306,36 +306,36 @@
                 <div class="proyecto" onclick="window.location.href='https://drive.google.com/file/d/1-fLbtmL4LKWyrSZ_NbzSXHQH0POoCaFy/view?usp=sharing'">
                     <img src="img/CapturaEnredados.PNG" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>Enredados</h3>
+                        <p>Disney</p>
                     </div>
                 </div>
                 <div class="proyecto" onclick="window.location.href='https://drive.google.com/file/d/1LeqhYqtfBmCHWBGY-fQzUZpqHVTxBCHG/view?usp=sharing'">
                     <img src="img/CapturaKimiNoNawa.PNG" alt="">
                     <div class="overlay">
                         <h3>Kimi No Nawa</h3>
-                        <p>Fotografía</p>
+                        <p>Makoto Shinkai</p>
                     </div>
                 </div>
                 <div class="proyecto" onclick="window.location.href='https://drive.google.com/file/d/1-3QPDhF7V3-BfiRUpp4UFvc4lWY5DnPS/view?usp=sharing'">
                     <img src="img/CapturaNathanDrake.PNG" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>Uncharted</h3>
+                        <p>Naughty Dog</p>
                     </div>
                 </div>
                 <div class="proyecto" onclick="window.location.href='https://drive.google.com/file/d/1Rf9MC62thdPwdS4Mu5Ofb5PSr2rlkNlu/view?usp=sharing'">
                     <img src="img/CapturaCoraline.PNG" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>Coraline</h3>
+                        <p>Laika Studios</p>
                     </div>
                 </div>
                 <div class="proyecto" onclick="window.location.href='https://drive.google.com/file/d/1ML2M-PWVfGFWSCx_bMGkOBPuLCoVOy5y/view?usp=sharing'">
                     <img src="img/CapturaDiana&Sapo.PNG" alt="">
                     <div class="overlay">
-                        <h3>Diseño Creativo</h3>
-                        <p>Fotografía</p>
+                        <h3>Diana y el Sapo</h3>
+                        <p>Disney</p>
                     </div>
                 </div>
             </div>
